--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="main-title">
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
-        <!--  <div class="about-container">
+            <!--  <div class="about-container">
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
@@ -256,7 +256,7 @@
                     <p>
                         ● Engaged in a creative challenge where I contributed to the design, development, and
                         creation of a video game from scratch within 48 hours. </p>
-                    
+
                 </div>
 
                 <div class="timeline-item">
@@ -644,18 +644,16 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.linkedin.com" target="_blank">
+                                <a href="www.linkedin.com/in/dorra-ben-abdallah-086bb51b9" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://www.kaggle.com/dorrabenabdallah" target="_blank">
                                     <i class="fab fa-kaggle"></i>
                                 </a>
                                 <a href="https://github.com/Celiandorra" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
+
                             </div>
                         </div>
                     </div>
