--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/unnamed.jpg" alt="">
+                    <img src="img/dorra1.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -591,8 +591,7 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            Feel free to get in touch <3
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
