projects + blog addded

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     contribute effectively to the success and growth of an organization.
                 </p>
                 <div class="btn-con">
-                    <a download href="./img/Resume_Dorra_English.pdf" class="main-btn" rel="noopener noreferrer"
+                    <a download href="./img/Dorra_Resume_English.pdf" class="main-btn" rel="noopener noreferrer"
                         target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon">
@@ -53,6 +53,7 @@
             <div class="main-title">
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
+            
             <!--  <div class="about-container">
                 <div class="left-about">
                     <h4>Information About me</h4>
@@ -97,6 +98,7 @@
                     </div>
                 </div>
             </div>-->
+
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
@@ -110,6 +112,10 @@
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
+
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">java</p>
 
                     </div>
                     <div class="progress-bar">
@@ -371,16 +377,10 @@
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Encrypt.tn</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Celiandorra/Security_Project" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
@@ -390,16 +390,10 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>This website itself!</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Celiandorra/Dorra_Portfolio_Project" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
@@ -408,6 +402,7 @@
                     <div class="image">
                         <img src="img/port3.jpg" alt="">
                     </div>
+
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
@@ -423,6 +418,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port4.jpg" alt="">
@@ -442,6 +438,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port5.jpg" alt="">
@@ -461,6 +458,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port2.jpg" alt="">
@@ -480,6 +478,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port7.jpg" alt="">
@@ -499,6 +498,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
         <section class="container" id="blogs">
@@ -511,14 +511,17 @@
                         <img src="img/port6.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                How to Create Your Own Website
+                                <a href="Esports.html">Esports beginnings</a>   
                             </h4>
+                            
+
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Doloribus natus voluptas, eos obcaecati recusandae amet?
                             </p>
                         </div>
                     </div>
+
                     <div class="blog">
                         <img src="img/blog1.jpg" alt="">
                         <div class="blog-text">
