--- a/Esports.html
+++ b/Esports.html
@@ -20,11 +20,11 @@
 <body>
     <div class="scrollHalf">
 
-        <div class="scrollHalf__grupo" data-scroll>
-            <div class="scrollHalf__grupo__imagen">
+        <div class="scrollHalf__group" data-scroll>
+            <div class="scrollHalf__group__image">
                 <img src="img/port6.jpg" />
             </div>
-            <div class="scrollHalf__grupo__contenido">
+            <div class="scrollHalf__group__content">
                 <h1> <span>Esports beginnings</span></h1>
 
                 <p>According to the definition in the Oxford Advanced Learner’s Dictionary, an Esport is “a video game
@@ -58,12 +58,14 @@
             </div>
         </div>
 
-        <div class="scrollHalf__grupo kk" data-scroll>
-            <div class="scrollHalf__grupo__imagen">
+        <div class="scrollHalf__group kk" data-scroll>
+            <div class="scrollHalf__group__image">
                 <img src="img/port1.jpg" />
 
             </div>
-            <div class="scrollHalf__grupo__contenido">
+            <div class="scrollHalf__group__content">
+
+                <p class="space"></p>
                 <h1>LAN & Online</h1>
 
                 <p>Decades passed, the gaming industry evolved with many new technologies and so did tournaments.
@@ -101,11 +103,11 @@
             </div>
         </div>
 
-        <div class="scrollHalf__grupo" data-scroll>
-            <div class="scrollHalf__grupo__imagen">
-                <img src="img/blog2.jpg" />
+        <div class="scrollHalf__group" data-scroll>
+            <div class="scrollHalf__group__image">
+                <img src="img/esports.jpg" />
             </div>
-            <div class="scrollHalf__grupo__contenido">
+            <div class="scrollHalf__group__content">
                 <h1>LAN vs Online</h1>
                 <p>On one side we have LAN, with a stable network thats provided by the organizers, a high competitive
                     integrity since all the players are present in one place, and reduced online risks and attacks which
@@ -172,5 +174,8 @@
 
     </div>
 
-
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
+    </div>
+    <script src="app.js"></script>
 </body>
