--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="main-title">
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
-            
+
             <!--  <div class="about-container">
                 <div class="left-about">
                     <h4>Information About me</h4>
@@ -516,8 +516,8 @@
                             
 
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                An article about Esports birth and its different forms.
+
                             </p>
                         </div>
                     </div>
