--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <!-- <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port3.jpg" alt="">
                     </div>
@@ -497,7 +497,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </section>
@@ -522,7 +522,7 @@
                         </div>
                     </div>
 
-                    <div class="blog">
+                  <!--  <div class="blog">
                         <img src="img/blog1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
@@ -582,7 +582,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </section>
         <section class="container contact" id="contact">
