--- a/index.html
+++ b/index.html
@@ -54,50 +54,6 @@
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
 
-            <!--  <div class="about-container">
-                <div class="left-about">
-                    <h4>Information About me</h4>
-                    <p>
-                        A senior student at Tunis Business School pursuing a Bachelor of Business Administration,
-                        majoring in Busieness Analytics and minoring in IT.
-                    </p>
-                    <div class="btn-con">
-                        <a download href="./img/Resume_Dorra_English.pdf" class="main-btn" rel="noopener noreferrer"
-                            target="_blank">
-                            <span class="btn-text">Download CV</span>
-                            <span class="btn-icon">
-                                <i class="fas fa-download"></i>
-                            </span>
-                        </a>
-                    </div>
-                </div>
-                <div class="right-about">
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">650+</p>
-                            <p class="small-text">Projects <br /> Completed</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of <br /> experience</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
 
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
@@ -176,6 +132,26 @@
                         ● Analysis of collected data.
                     </p>
                 </div>
+
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2023</p>
+                    <h5>Data Visualization: Virtual Internship<span> - TATA	- Forage</span></h5>
+                    <p>
+                        Data Cleaning and Preparation.
+                    </p>
+                    <p>
+                        Analyzed data to understand the context, trends, and insights that need to be conveyed through visualizations.
+                    </p>
+                    <p>
+                        Developed interactive dashboards using tools like Tableau and Power BI.
+                    </p>
+                </div>
+
+
 
 
                 <div class="timeline-item">
