--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                     <p class="tl-duration">2023</p>
                     <h5>Data Visualization: Virtual Internship<span> - TATA	- Forage</span></h5>
                     <p>
-                        Data Cleaning and Preparation.
+                        ● Data Cleaning and Preparation.
                     </p>
                     <p>
-                        Analyzed data to understand the context, trends, and insights that need to be conveyed through visualizations.
+                        ● Analyzed data to understand the context, trends, and insights that need to be conveyed through visualizations.
                     </p>
                     <p>
-                        Developed interactive dashboards using tools like Tableau and Power BI.
+                        ● Developed interactive dashboards using tools like Tableau and Power BI.
                     </p>
                 </div>
 
