chnged a word bruh

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         ● Contribution to the preparation of research reports, papers, and presentations.
                     </p>
                     <p>
-                        ● Analysis of collected data.
+                        ● Integration of collected data.
                     </p>
                 </div>
 
