--- a/index.html
+++ b/index.html
@@ -104,12 +104,16 @@
                     </div>
 
                     <div class="progress-bar">
+                        <p class="prog-title">Docker</p>
+                    </div>
+
+                    <div class="progress-bar">
                         <p class="prog-title">Machine Learning Algorithms: KNN, CART,
                             RandomForest, ANN, PCA…</p>
                     </div>
 
                     <div class="progress-bar">
-                        <p class="prog-title">Machine Learning Libraries: Pandas, TF, SKlearn…</p>
+                        <p class="prog-title">Machine Learning Libraries: Pandas, Numpys, TensorFlow, SKlearn…</p>
                     </div>
 
                 </div>
