--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
             </div>
             <h4 class="stat-title">My Professional Timeline</h4>
             <div class="timeline">
+
+                
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
@@ -137,6 +139,22 @@
                     </p>
                 </div>
 
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration"> 2023</p>
+                    <h5>Business Developer<span> - I Speak</span></h5>
+                    <p>
+                        ● Conducting market research to understand industry trends, customer needs, and competitive landscapes.
+                    </p>
+                    <p>
+                        ● Identifying and pursuing new business opportunities to generate revenue and foster company growth.
+                    </p>
+                    <p>
+                        ● Creating marketing content and collateral to support business development initiatives.
+                    </p>
+                </div>
 
                 <div class="timeline-item">
                     <div class="tl-icon">
