--- a/index.html
+++ b/index.html
@@ -396,28 +396,23 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port3.jpg" alt="">
                     </div>
 
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Java Project</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Celiandorra/Inventory-Management-and-Sales-Reporting-System-Java-Project" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
+                            
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item">
+                <!-- <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port4.jpg" alt="">
                     </div>
