--- a/index.html
+++ b/index.html
@@ -412,27 +412,24 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Data Projects</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
+                            <a href="https://www.kaggle.com/dorrabenabdallah" class="icon">
+                                <i class="fab fa-kaggle"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item">
+                <!-- <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port5.jpg" alt="">
                     </div>
