--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.jpg" alt="">
+                        <img src="img/esports.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 <a href="Esports.html">Esports beginnings</a>   
