--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="progress-bar">
-                        <p class="prog-title">C#</p>
+                        <p class="prog-title">C#/C++</p>
 
                     </div>
                     <div class="progress-bar">
