--- a/index.html
+++ b/index.html
@@ -427,65 +427,49 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Web Scraping </h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Celiandorra/Linkedin-Web-Scraping" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                           
+                        </div>
+                    </div>
+                </div>
+
+              <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/port14.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Impact Report</h3>
+                        <div class="icons">
+                            <a href="https://github.com/Celiandorra/Support-Programs-Impact-Report" class="icon">
+                                <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
+                            
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/port15.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>FoodFindr</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Celiandorra/Restaurant-Rest-API" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
-                </div>
-
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port7.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div> -->
+                </div> 
 
             </div>
         </section>
