--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                     </div>
 
                     <div class="progress-bar">
+                        <p class="prog-title">PowerApps</p>
+                    </div>
+
+                    <div class="progress-bar">
                         <p class="prog-title">PowerBI</p>
                     </div>
 
@@ -105,6 +109,10 @@
 
                     <div class="progress-bar">
                         <p class="prog-title">Docker</p>
+                    </div>
+
+                    <div class="progress-bar">
+                        <p class="prog-title">Odoo</p>
                     </div>
 
                     <div class="progress-bar">
