--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     contribute effectively to the success and growth of an organization.
                 </p>
                 <div class="btn-con">
-                    <a download href="./img/DorraBenAbdallah_Resume_English.pdf" class="main-btn" rel="noopener noreferrer"
+                    <a download href="./img/Resume Dorra Ben Abdallah.pdf" class="main-btn" rel="noopener noreferrer"
                         target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon">
@@ -59,25 +59,25 @@
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
-                        <p class="prog-title">html</p>
+                        <p class="prog-title">html / CSS / Javascript</p>
                     </div>
 
                     <div class="progress-bar">
                         <p class="prog-title">C#/C++</p>
 
                     </div>
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">javascript</p>
 
-                    </div>
+                    </div> -->
                     <div class="progress-bar">
-                        <p class="prog-title">java</p>
+                        <p class="prog-title">Java</p>
 
                     </div>
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">R</p>
 
-                    </div>
+                    </div> -->
                     <div class="progress-bar">
                         <p class="prog-title">MongoDB</p>
 
@@ -88,20 +88,20 @@
                     </div>
 
                     <div class="progress-bar">
-                        <p class="prog-title">PowerApps</p>
+                        <p class="prog-title">PowerApps / PowerBI</p>
                     </div>
 
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">PowerBI</p>
-                    </div>
+                    </div> -->
 
                     <div class="progress-bar">
                         <p class="prog-title">SQL</p>
                     </div>
 
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">CSS</p>
-                    </div>
+                    </div> -->
 
                     <div class="progress-bar">
                         <p class="prog-title">PHP</p>
@@ -129,12 +129,28 @@
             <h4 class="stat-title">My Professional Timeline</h4>
             <div class="timeline">
 
-                
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 - present</p>
+                    <p class="tl-duration">Feb 2024 - Jul 2024</p>
+                    <h5>Sourcing & Purchasing Intern<span> - Kumulus</span></h5>
+                    <p>
+                        ● Assist in identifying potential suppliers and vendors for products and services.
+                    </p>
+                    <p>
+                        ● Assist in the development and implementation of sourcing strategies.
+                    </p>
+                    <p>
+                        ● Analyze current and potential suppliers to optimize sourcing costs.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Aug 2023 - Apr 2024</p>
                     <h5>Research Assistant<span> - 60_decibels</span></h5>
                     <p>
                         ● Data gathering through various methods.
@@ -151,7 +167,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration"> 2023</p>
+                    <p class="tl-duration"> Nov 2023 - Dec 2023</p>
                     <h5>Business Developer<span> - I Speak</span></h5>
                     <p>
                         ● Conducting market research to understand industry trends, customer needs, and competitive landscapes.
@@ -168,7 +184,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023</p>
+                    <p class="tl-duration">Aug 2023 - Sep 2023</p>
                     <h5>Data Visualization: Virtual Internship<span> - TATA	- Forage</span></h5>
                     <p>
                         ● Data Cleaning and Preparation.
@@ -188,7 +204,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2020 - 2023</p>
+                    <p class="tl-duration">Jun 2020 - Sep 2023</p>
                     <h5>English Consultant<span> - OMNIBUS Project Poland</span></h5>
                     <p>
                         ● Educational Content creation
