--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">Feb 2024 - Jul 2024</p>
-                    <h5>Sourcing & Purchasing Intern<span> - Kumulus</span></h5>
+                    <p class="tl-duration">Feb 2024 - July 2024</p>
+                    <h5>Sourcing & Purchasing Associate<span> - Kumulus</span></h5>
                     <p>
                         ● Assist in identifying potential suppliers and vendors for products and services.
                     </p>
