--- a/index.html
+++ b/index.html
@@ -134,15 +134,18 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">Feb 2024 - July 2024</p>
-                    <h5>Sourcing & Purchasing Associate<span> - Kumulus</span></h5>
+                    <h5>Sourcing & Purchasing Analyst<span> - Kumulus</span></h5>
                     <p>
-                        ● Assist in identifying potential suppliers and vendors for products and services.
+                        ● Identified potential suppliers to optimize sourcing costs with a 35% cost reduction achieved.
                     </p>
                     <p>
-                        ● Assist in the development and implementation of sourcing strategies.
+                        ● Analyzed current and potential suppliers' data for sourcing recommendations.
                     </p>
                     <p>
-                        ● Analyze current and potential suppliers to optimize sourcing costs.
+                        ● Evaluated supplier capabilities, cost structures, and performance.
+                    </p>
+                    <p>
+                        ● Maintained an englobing database of supplier information, contracts, and negotiations.
                     </p>
                 </div>
 
@@ -153,13 +156,13 @@
                     <p class="tl-duration">Aug 2023 - Apr 2024</p>
                     <h5>Research Assistant<span> - 60_decibels</span></h5>
                     <p>
-                        ● Data gathering through various methods.
+                        ● Gathered Data through various methods, most notably surveys and questionnaires.
                     </p>
                     <p>
-                        ● Contribution to the preparation of research reports, papers, and presentations.
+                        ● Contributed to the preparation of research reports, papers, and presentations.
                     </p>
                     <p>
-                        ● Integration of collected data.
+                        ● Integrated the collected data through Excel.
                     </p>
                 </div>
 
@@ -170,13 +173,13 @@
                     <p class="tl-duration"> Nov 2023 - Dec 2023</p>
                     <h5>Business Developer<span> - I Speak</span></h5>
                     <p>
-                        ● Conducting market research to understand industry trends, customer needs, and competitive landscapes.
+                        ● Conducted market research to understand industry trends, customer needs, and competitive landscapes.
                     </p>
                     <p>
-                        ● Identifying and pursuing new business opportunities to generate revenue and foster company growth.
+                        ● Identified and pursued new business opportunities to generate revenue and foster company growth.
                     </p>
                     <p>
-                        ● Creating marketing content and collateral to support business development initiatives.
+                        ● Created marketing content and collateral to support business development initiatives.
                     </p>
                 </div>
 
@@ -185,9 +188,9 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">Aug 2023 - Sep 2023</p>
-                    <h5>Data Visualization: Virtual Internship<span> - TATA	- Forage</span></h5>
+                    <h5>Data Analyst Intern<span> - TATA	- Forage</span></h5>
                     <p>
-                        ● Data Cleaning and Preparation.
+                        ● Handled data by cleaning and prepping for analysis.
                     </p>
                     <p>
                         ● Analyzed data to understand the context, trends, and insights that need to be conveyed through visualizations.
@@ -207,13 +210,13 @@
                     <p class="tl-duration">Jun 2020 - Sep 2023</p>
                     <h5>English Consultant<span> - OMNIBUS Project Poland</span></h5>
                     <p>
-                        ● Educational Content creation
+                        ● Created Educational content.
                     </p>
                     <p>
-                        ● Proofreading & post-editing.
+                        ● Handled proofreading & post-editing.
                     </p>
                     <p>
-                        ● Review written content to ensure accuracy, clarity, and adherence to linguistic conventions.
+                        ● Reviewed written content to ensure accuracy, clarity, and adherence to linguistic conventions.
                     </p>
                 </div>
             </div>
