--- a/index.html
+++ b/index.html
@@ -399,10 +399,23 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="img/port5.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3 style="text-align: center;">Water Quality & Potability Prediction</h3>
+                        <div class="icons">
+                            <a href="https://github.com/Celiandorra/WaterQuality-PotabilityPredictiont" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Encrypt.tn</h3>
+                        <h3 style="text-align: center;">Encrypt.tn</h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Security_Project" class="icon">
                                 <i class="fab fa-github"></i>
@@ -415,7 +428,7 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>This website itself!</h3>
+                        <h3 style="text-align: center;">This website itself!</h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Dorra_Portfolio_Project" class="icon">
                                 <i class="fab fa-github"></i>
@@ -429,7 +442,7 @@
                     </div>
 
                     <div class="hover-items">
-                        <h3>Java Project</h3>
+                        <h3 style="text-align: center;">Java Project</h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Inventory-Management-and-Sales-Reporting-System-Java-Project" class="icon">
                                 <i class="fab fa-github"></i>
@@ -441,10 +454,10 @@
 
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port9.jpg" alt="">
+                        <img src="img/port17.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Data Projects</h3>
+                        <h3 style="text-align: center;">Data Projects</h3>
                         <div class="icons">
                             <a href="https://www.kaggle.com/dorrabenabdallah" class="icon">
                                 <i class="fab fa-kaggle"></i>
@@ -459,7 +472,7 @@
                         <img src="img/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Web Scraping </h3>
+                        <h3 style="text-align: center;">Web Scraping </h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Linkedin-Web-Scraping" class="icon">
                                 <i class="fab fa-github"></i>
@@ -474,7 +487,7 @@
                         <img src="img/port14.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Impact Report</h3>
+                        <h3 style="text-align: center;">Impact Report</h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Support-Programs-Impact-Report" class="icon">
                                 <i class="fab fa-github"></i>
@@ -489,7 +502,7 @@
                         <img src="img/port15.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>FoodFindr</h3>
+                        <h3 style="text-align: center;">FoodFindr</h3>
                         <div class="icons">
                             <a href="https://github.com/Celiandorra/Restaurant-Rest-API" class="icon">
                                 <i class="fab fa-github"></i>
