--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration"> Nov 2023 - Dec 2023</p>
-                    <h5>Business Developer<span> - I Speak</span></h5>
+                    <h5>Business Developer<span> -Speak Duo</span></h5>
                     <p>
                         ● Conducted market research to understand industry trends, customer needs, and competitive landscapes.
                     </p>
